--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.lnk
+*/.venv/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +208,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+.vs/slnx.sqlite
+.vs/slnx.sqlite-journal
+server/testing/.python-version
+server/testing/pyproject.toml
