--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .vs/slnx.sqlite-journal
 server/testing/.python-version
 server/testing/pyproject.toml
+server/testing/Anaconda Prompt omni thingy.lnk
+server/testing/__pycache__/stream.cpython-311.pyc
