--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@remotion/player": "^4.0.318",
+    "@types/hls.js": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hls.js": "^1.6.5",
     "lucide-react": "^0.522.0",
     "motion": "^12.18.1",
     "next": "15.3.4",
